force-app/main/default/objects/Vehicle__c/fields/Last_Known_Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Known_Odometer_Reading__c</fullName>
    <label>Last Known Odometer Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>