force-app/main/default/objects/Vehicle__c/fields/Last_Service_Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Odometer_Reading__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Service Odometer Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>