force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>