force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Owner__c</columns>
    <columns>Last_Known_Odometer_Reading__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Color__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>